fixed spacing on prod page

--- a/public/style.css
+++ b/public/style.css
@@ -196,6 +196,7 @@ select{
   justify-content: center;
   flex-wrap: wrap;
   height: 60vh;
+  margin-top: 150px;
 }
 
 @media (max-width: 1100px){
